--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.3.9",
-    "vuex": "^3.0.1"
+    "axios": "^0.18.1",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.2",
+    "vuetify": "^1.5.16",
+    "vuex": "^3.1.1",
+    "wired-elements": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.6",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-jest": "^21.0.2",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^7.1.5",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -35,16 +36,16 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
-    "chromedriver": "^2.43.3",
+    "chalk": "^2.4.2",
+    "chromedriver": "^2.46.0",
     "copy-webpack-plugin": "^4.6.0",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^3.2.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.0.1",
@@ -53,30 +54,30 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "jest": "^22.4.4",
+    "jest": "^24.8.0",
     "jest-serializer-vue": "^0.3.0",
-    "nightwatch": "^0.9.12",
-    "node-notifier": "^5.3.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "nightwatch": "^1.2.1",
+    "node-notifier": "^5.4.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.1",
     "ora": "^1.2.0",
-    "portfinder": "^1.0.19",
+    "portfinder": "^1.0.21",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.1.6",
     "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
+    "rimraf": "^2.6.3",
     "selenium-server": "^3.141.59",
-    "semver": "^5.6.0",
+    "semver": "^5.7.1",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^0.5.8",
+    "url-loader": "^2.1.0",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.7.3",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.17",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^3.12.0",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-dev-server": "^2.11.3",
-    "webpack-merge": "^4.1.4"
+    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-dev-server": "^2.11.5",
+    "webpack-merge": "^4.2.1"
   },
   "engines": {
     "node": ">= 6.0.0",
